Extracted all string resources

--- a/SaajidLab5/src/main/res/values/strings.xml
+++ b/SaajidLab5/src/main/res/values/strings.xml
@@ -4,4 +4,25 @@
     <string name="list_fragment">List Fragment</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello">Hello</string>
+    <string name="hello1">Hello1</string>
+    <string name="test_toast">Test toast</string>
+    <string name="android">Android</string>
+    <string name="art">ART</string>
+    <string name="avd">AVD</string>
+    <string name="intent">Intent</string>
+    <string name="aot">AOT</string>
+    <string name="emulator">Emulator</string>
+    <string name="activity">Activity</string>
+    <string name="fragment">Fragment</string>
+    <string name="life_cycle_events">Life Cycle events</string>
+    <string name="open_source_software_stack">Open source software stack</string>
+    <string name="android_runtime_environment">Android Runtime Environment</string>
+    <string name="android_virtual_device">Android Virtual Device</string>
+    <string name="an_abstract_description_of_an_operation_to_be_performed">An abstract description of an operation to be performed</string>
+    <string name="ahead_of_time_compilation">Ahead of Time compilation</string>
+    <string name="simulates_android_devices_on_your_computer">Simulates Android devices on your computer</string>
+    <string name="application_component_that_provides_a_screen">Application component that provides a screen</string>
+    <string name="a_mini_activity">A mini activity</string>
+    <string name="these_methods_are_called_when">These methods are called when .....</string>
 </resources>
